# EngineCPP

./: .gitignore  CMakeLists.txt  CMakeSettings.json  EngineCPP.sln  build.js
AssetServer/: CMakeLists.txt
AssetServer/AssetServer/: asset_query.cpp  asset_server.cpp
AssetServer/interface/AssetServer/: asset_query.hpp  asset_server.hpp
AssetServer/test/: test.cpp
Assets/database/: assets.db  scheme.sql
Assets/shader/: EditorGizmoFrag.frag  EditorSelectionFrag.frag  QuadDraw.frag  QuadDraw.vert  TriFrag.frag  TriFrag.spv  TriVert.spv  TriVert.vert
Assets/shader/standard/: Fragment.frag  Fragment_A.frag  Vertex_A.vert
CPPTestVS/: CMakeLists.txt  CPPTestVS.vcxproj  CPPTestVS.vcxproj.filters  EngineCPP.cpp  contants.hpp  functional.hpp  math.hpp  matrix_def.hpp  quaternion_def.hpp  vector_def.cpp  vector_def.hpp
CPPTestVS/rel/: 0.0.1.cpp
CPPTestVS/src/: EngineCPP.cpp
Collision/: CMakeLists.txt
Collision/Collision/: collision.cpp  collision_definition.hpp  collision_objects.hpp
Collision/interface/Collision/: collision.hpp
Collision/test/: test.cpp
Common/: CMakeLists.txt
Common/Common/Asset/: asset_database.hpp  asset_key.hpp
Common/Common/Clock/: clock.hpp
Common/Common/Container/: array_def.hpp  gptr.hpp  hashmap.hpp  hashmap_def.hpp  list.hpp  list_def.hpp  nested_vector.hpp  pool.hpp  pool_def.hpp  pool_of_vector.hpp  pool_v2.hpp  resource_map.hpp  string.hpp  string_def.hpp  token.hpp  tree.hpp  tree_def.hpp  varying_pool.hpp  varying_vector.hpp  vector.hpp  vector_def.hpp  vector_of_vector.hpp
Common/Common/Exception/: exception.hpp
Common/Common/File/: file.hpp
Common/Common/Functional/: Callback.hpp  Hash.hpp  Optional.hpp  Sort.hpp  ToString.hpp
Common/Common/Include/: platform_include.hpp
Common/Common/Memory/: allocators.hpp  handle.hpp  heap.hpp  memory_slice.hpp  standard.hpp  type_safety.hpp
Common/Common/Serialization/: binary.hpp  json.hpp
Common/Common/Thread/: mutex.hpp  thread.hpp
Common/test/: test.cpp
Engine/: CMakeLists.txt
Engine/Engine/: engine.cpp  engine_loop.hpp
Engine/interface/Engine/: engine.hpp
Input/: CMakeLists.txt
Input/Input/: input.cpp
Input/interface/Input/: input.hpp
Math/: CMakeLists.txt
Math/Math/: constants.cpp  contants.hpp  functional.hpp  geometry.hpp  geometry_def.hpp  include.cpp  math.hpp  matrix_def.hpp  quaternion_def.hpp  serialization.hpp  transform_def.hpp  vector_def.hpp
Math/test/: test.cpp
Middleware/: CMakeLists.txt  middleware.txt
Middleware/Middleware/: RenderMiddleware.hpp  collision_middleware.hpp  include.cpp  render_middleware.hpp  scene_middleware.hpp
Render/: CMakeLists.txt
Render/Render/: Render.cpp  include.cpp  paged_buffer.hpp
Render/Render/impl/: objects.cpp
Render/driver/Render/: rdwindow.hpp
Render/interface/Render/: assets.hpp  objects.hpp  render.hpp
Render/shader/: TriVert.spv  TriVert.vert
Rewrite/Collision2/: CMakeLists.txt
Rewrite/Collision2/Collision2/: collision2.cpp  collision2_objects.hpp
Rewrite/Collision2/interface/Collision2/: collision2.hpp
Rewrite/Collision2/test/: test.cpp
Rewrite/Common2/: CMakeLists.txt
Rewrite/Common2/Common2/: common2.hpp
Rewrite/Common2/Common2/Container/: heap.hpp  pool.hpp  string.hpp  tree.hpp  varying_vector.hpp  vector.hpp
Rewrite/Common2/Common2/Container/Specialization/: heap_memory.hpp  pool_indexed.hpp  pool_of_vector.hpp  vector_of_vector.hpp
Rewrite/Common2/Common2/Framework/MemoryStructure/: memory_structure.hpp
Rewrite/Common2/Common2/Functional/: assert.hpp  container_iteration.hpp  sort.hpp  string_functions.hpp
Rewrite/Common2/Common2/Macros/: macros.hpp
Rewrite/Common2/Common2/Memory/: handle.hpp  memory.hpp  slice.hpp  span.hpp  token.hpp
Rewrite/Common2/Common2/Serialization/: json.hpp
Rewrite/Common2/Common2/Types/: types.hpp
Rewrite/Common2/test/: test.cpp
Rewrite/Math2/: CMakeLists.txt
Rewrite/Math2/Math2/: definitions.hpp  geometry.hpp  kernel.hpp  math.hpp
Rewrite/Math2/test/: test.cpp
Rewrite/Scene2/: CMakeLists.txt
Rewrite/Scene2/Scene2/: component2.hpp  scene2.hpp  scene2_header.hpp
Rewrite/Scene2/test/: test.cpp
Scene/: CMakeLists.txt
Scene/Scene/: Scene.cpp
Scene/components/: CMakeLists.txt
Scene/components/SceneComponents/: components.hpp  include.cpp  serialization.hpp
Scene/interface/Scene/: assets.hpp  component_def.hpp  scene.hpp  serialization.hpp
Scene/interface/Scene/kernel/: scene.hpp
Scene/test/: test.cpp
SceneSerialization/: CMakeLists.txt
SceneSerialization/SceneSerialization/: include.cpp
SceneSerialization/interface/SceneSerialization/: scene_serialization.hpp
Test/: CMakeLists.txt
Test/SandboxTest/: CMakeLists.txt  SandboxTest.cpp
Tools/: CMakeLists.txt
Tools/AssetDatabaseUpdate/: CMakeLists.txt
Tools/AssetDatabaseUpdate/AssetDatabaseUpdate/: main.cpp  obj_reader.hpp
Tools/AssetDatabaseUpdateV2/: CMakeLists.txt
Tools/AssetDatabaseUpdateV2/AssetDatabaseUpdateV2/: main.cpp  obj_reader.hpp
Tools/MainTool/: CMakeLists.txt
Tools/MainTool/MainTool/: MainTool.cpp
env/: env.hpp
